src/objects/Financial_Note__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Application__c</fullName>
        <label>Related To</label>
        <referenceTo>Financial_Application__c</referenceTo>
        <relationshipLabel>Financial Notes</relationshipLabel>
        <relationshipName>Financial_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Note</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>